Cloudflare Web Analytics 導入

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,5 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "0e43b64de0dd41fd97b925f8ffe2ebdc"}'></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
