description と canonical を設定

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,9 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <title>annict-tracker</title>
+    <meta name="description" content="annict-tracker は、Annict での視聴記録を便利にする Web アプリケーションです。">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>annict-tracker</title>
+    <link rel="canonical" href="https://annict-tracker.pages.dev"/>
   </head>
   <body>
     <div id="root"></div>
