--- a/pages/index.html
+++ b/pages/index.html
@@ -11,13 +11,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
-    <!-- Cloudflare Web Analytics -->
-    <script
-      defer
-      src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "0e43b64de0dd41fd97b925f8ffe2ebdc"}'
-    ></script>
-    <!-- End Cloudflare Web Analytics -->
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "0e43b64de0dd41fd97b925f8ffe2ebdc"}'></script>
   </body>
 </html>
