必要な API を preload する

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://annict-tracker.pages.dev" />
+    <link rel="preload" href="/api/version" as="fetch" crossorigin="use-credentials">
+    <link rel="preload" href="/api/auth/csrf" as="fetch" crossorigin="use-credentials">
+    <link rel="preload" href="/api/auth/session" as="fetch" crossorigin="use-credentials">
   </head>
   <body>
     <div id="root"></div>
